# reactive-ai-agents

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  STRATEGY_ARCHITECTURE_REVIEW.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  setup.py  subscription_cancellation.md  test_generic_data_preservation.py  test_google_tools.py
.github/workflows/: ci.yml  python-publish.yml
agent_mcp/: __init__.py  client.py  server.py
agent_mcp/helpers/: general.py
agent_mcp/servers/: server.py
agents/: __init__.py  base.py  base_agent.py  base_react_agent.py  builders.py  react_agent.py
common/: __init__.py  types.py
components/: __init__.py  memory_manager.py  metrics_manager.py  reflection_manager.py  tool_manager.py  workflow_manager.py
config/: __init__.py  logging.py  mcp_config.py  workflow.py
context/: __init__.py  agent_context.py  agent_events.py  agent_observer.py  session.py
docs/: TYPED_EVENT_SUBSCRIPTIONS.md
examples/: confirmation_types_usage.py  context_observability_demo.py  tool_confirmation_with_feedback.py  tool_debug_example.py  typed_event_subscription_demo.py
loggers/: base.py
model_providers/: __init__.py  base.py  factory.py  groq.py  ollama.py
plugins/openai/: README.md  __init__.py  plugin.json
prompts/: __init__.py  agent_prompts.py
reactive_agents/: __init__.py
reactive_agents/agent_mcp/: agent.db  client.py
reactive_agents/agents/: base.py  builders.py  config_validator.py  event_manager.py  execution_engine.py  react_agent.py  task_executor.py  tool_processor.py
reactive_agents/agents/validators/: config_validator.py
reactive_agents/app/: __init__.py
reactive_agents/app/agents/: __init__.py  base.py  reactive_agent.py  reactive_agent.pyi
reactive_agents/app/builders/: __init__.py  agent.py
reactive_agents/app/communication/: __init__.py  a2a_official_bridge.py  a2a_protocol.py
reactive_agents/app/workflows/: __init__.py  orchestrator.py
reactive_agents/common/: __init__.py  types.py
reactive_agents/common/types/: agent_types.py  event_types.py  memory_types.py  session_types.py  status_types.py
reactive_agents/components/: __init__.py  data_extractor.py  event_manager.py  execution_engine.py  memory_manager.py  metrics_manager.py  plan_manager.py  reflection_manager.py  task_executor.py  tool_manager.py  workflow_manager.py
reactive_agents/config/: logging.py  mcp_config.py  natural_language_config.py  settings.py  workflow.py
reactive_agents/config/validators/: config_validator.py
reactive_agents/console/: __init__.py  cli.py
reactive_agents/console/commands/: __init__.py  base.py  plugin_commands.py
reactive_agents/console/output/: __init__.py  colors.py
reactive_agents/context/: __init__.py  agent_context.py  agent_events.py  agent_observer.py  session.py
reactive_agents/core/: __init__.py
reactive_agents/core/context/: __init__.py  agent_context.py  context_manager.py
reactive_agents/core/engine/: __init__.py  execution_engine.py  reactive_execution_engine.py  task_executor.py
reactive_agents/core/events/: __init__.py  agent_events.py  agent_observer.py  event_bus.py  event_manager.py
reactive_agents/core/memory/: __init__.py  memory_manager.py  vector_memory.py
reactive_agents/docker/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  build.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml
reactive_agents/docs/: A2A_OFFICIAL_INTEGRATION.md  ARCHITECTURAL_REFACTORING_SUMMARY.md  AdaptoveReasoning.md  CENTRALIZED_PROMPTS_SYSTEM.md  COMPONENT_BASED_REASONING.md  CONTEXT_MANAGER_IMPLEMENTATION.md  CORE_FRAMEWORK_IMPROVEMENT_PLAN.md  CORE_FRAMEWORK_STATUS.md  DYNAMIC_EVENT_TYPING.md  MCP_RESTORATION_SUMMARY.md  OFFICIAL_A2A_SUCCESS.md  PHASE_2_MIGRATION_STATUS.md  PROPOSED_STRUCTURE.md  PROVIDER_TESTING.md  README_AGENT_STATE_OBSERVATION.md  REFACTOR_SUMMARY.md  Refactor.md  STRUCTURE_COMPARISON.md  STRUCTURE_MIGRATION_PLAN.md  STRUCTURE_MIGRATION_STATUS.md  STRUCTURE_VISION_SUMMARY.md  TEST_SUITE_SETUP_SUMMARY.md  VECTOR_MEMORY_IMPLEMENTATION_SUMMARY.md  confirmation_system.md
reactive_agents/examples/: agent_observer_demo.py  complete_refactor_demo.py  component_based_strategy_demo.py  core_framework_demo.py  event_subscription_example.py  official_a2a_integration_demo.py  official_a2a_sdk_demo.py  openai_anthropic_demo.py  reactive_refactor_demo.py  realtime_agent_monitor.py  simple_a2a_demo.py  structure_migration_demo.py  tool_confirmation_with_feedback.py  tool_debug_example.py  type_inference_demo.py  typed_event_subscription_demo.py
reactive_agents/loggers/: __init__.py  base.py
reactive_agents/model_providers/: base.py  factory.py  groq.py  ollama.py
reactive_agents/plugins/: __init__.py  plugin_manager.py
reactive_agents/prompts/: agent_prompts.py
reactive_agents/providers/: __init__.py
reactive_agents/tests/: README.md  ci_mock.py  conftest.py  mocks.py
reactive_agents/tools/: __init__.py  abstractions.py  base.py  general.py
reactive_agents/utils/: base.py
reactive_agents/workflows/: publish.yml
tests/: __init__.py  ci_mock.py  conftest.py  mocks.py
tests/integration/: conftest.py  mcp_fixtures.py  mock_mcp.py  test_builder_integration.py  test_custom_tools.py  test_mcp_tools.py
tests/unit/: fixes_for_factory_tests.py  test_builders.py  test_react_agent.py
tools/: __init__.py  abstractions.py  general.py  helpers.py
(+142 files in other folders)
