[tool.poetry]
name = "reactive-agents"
version = "0.1.0"
description = "A custom reactive AI Agent framework for LLM-driven task execution"
authors = ["Tyler Buell"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tylerbuell/reactive-ai-agent"
repository = "https://github.com/tylerbuell/reactive-ai-agent"
documentation = "https://github.com/tylerbuell/reactive-ai-agent#readme"
keywords = ["ai", "agents", "llm", "reactive", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [
    { include = "agents" },
    { include = "model_providers" },
    { include = "tools" },
    { include = "prompts" },
    { include = "loggers" },
    { include = "config" },
    { include = "agent_mcp" },
]

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.4.4"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.10.3"
docstring-parser = "^0.16"
groq = "^0.13.0"
markitdown = "^0.0.1a3"
colorlog = "^6.9.0"
mcp = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"  # For testing async code
pytest-cov = "^4.1.0"       # For code coverage

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tylerbuell/reactive-ai-agent/issues"
"Changelog" = "https://github.com/tylerbuell/reactive-ai-agent/releases"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
